syntax = "proto3";
package messenger;
import "timestamp.proto";
option go_package = "satweave/sat-node/infos";


enum InfoType {
  INVALID = 0;
  NODE_INFO = 1;
  BUCKET_INFO = 2;
  CLUSTER_INFO = 3;
  USER_INFO = 4;
  GROUP_INFO = 5;
  VOLUME_INFO = 6;
  ACCESS_INFO = 7;
  TASK_INFO = 8;
}

// BaseInfo collect all type of info
message BaseInfo {
  oneof info{
    NodeInfo node_info = 1;
    ClusterInfo cluster_info = 2;
    UserInfo user_info = 3;
    GroupInfo group_info = 4;
    AccessInfo access_info = 5;
    TaskInfo task_info = 6;
  }
}

// UserInfo is the info of SatWeave user
message UserInfo {
  string user_id = 1;
  string user_name = 2;
  string user_group = 3;
  string user_email = 4;
  string user_password = 5;
  string user_status = 6;
  Timestamp user_created_at = 7;
  Timestamp user_updated_at = 8;
}

message GroupInfo {
  string group_id = 1;
  string group_name = 2;
  string group_description = 3;
  Timestamp group_created_at = 4;
  Timestamp group_updated_at = 5;
}

message AccessInfo {
  string access_key = 1;
  string access_secret = 2;
  string user_id = 3;
}

message ClusterInfo{
  uint64 term = 1;
  NodeInfo leader_info = 2;
  repeated NodeInfo nodes_info = 3;
  Timestamp update_timestamp = 4;
  uint64 last_term = 9;
}

message TaskInfo{
  // 任务 id
  string task_id = 1;
  // 客户端的ip
  string user_ip = 2;
  // 客户端的rpc端口
  string user_port = 3;
  // 任务的文件路径，可以为空
  string file_path = 4;
  // 需要运行的任务镜像名
  string image_name = 5;
  // 任务当前的状态
  TaskState state = 6;
  // 任务类型
  TaskType type = 7;
  // 实际被调度到的节点信息
  NodeInfo worker_info = 8;
}

message InfoStorageState {
  uint64 Term = 1;
  uint64 LeaderID = 2;
  map<uint64, NodeInfo> InfoMap = 3;
  Timestamp UpdateTimeStamp = 4;
}

enum TaskState{
  Scheduled = 0;
  Running = 1;
  Finished = 2;
}

enum TaskType{
  Online = 0;
  Offline = 1;
}

enum NodeState{
  UNKNOWN = 0;
  ONLINE = 1;
  OFFLINE = 2;
  ERROR = 3;
}


message NodeInfo {
  uint64 raft_id= 1;
  string uuid= 2;
  string ip_addr = 3;
  uint64 rpc_port = 4;
  uint64 capacity = 5;
  NodeState state = 6;
}


message CfContent {
  string cf_name = 1;
  repeated bytes keys = 2;
  repeated bytes values = 3;
}

message Snapshot {
  repeated CfContent cf_contents = 1;
}