syntax = "proto3";
package messenger;

import "common.proto";
import "infos.proto";

option go_package = "satweave/sat-node/watcher";

service Watcher {
  // AddNewNodeToCluster will propose a new NodeInfo in moon,
  // if success, it will propose a ConfChang, to add the raftNode into moon group
  rpc AddNewNodeToCluster (NodeInfo) returns (AddNodeReply) {}
  // GetClusterInfo return requested cluster info to rpc client,
  // if GetClusterInfoRequest.Term == 0, it will return current cluster info.
  rpc GetClusterInfo(GetClusterInfoRequest) returns (GetClusterInfoReply) {}
  // SubmitGeoUnSensitiveTask will Create a Task in TCS
  rpc SubmitGeoUnSensitiveTask(GeoUnSensitiveTaskRequest) returns (Result) {}
  rpc SaveTaskFile(File) returns (Result) {}
  rpc GetTaskFile(GetTaskFileRequest) returns (GetTaskFileReply) {}
}

message GetTaskFileRequest {
  string task_file_name = 1;
}

message GetTaskFileReply {
  Result result = 1;
  File file = 2;
}

message AddNodeReply {
  Result result = 1;
  NodeInfo leader_info = 2;
  repeated NodeInfo peers_node_info = 3;
}

message GetClusterInfoRequest {
  uint64 term = 1;
}

message GetClusterInfoReply {
  Result result = 1;
  ClusterInfo cluster_info = 2;
}

message GeoUnSensitiveTaskRequest {
  string task_uuid = 1;
  string image_name = 2;
  File file_content = 3;
}